<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/llMainAct"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/appBackground"
    >
    <TextView
        android:padding="5dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    </TextView>
    <TextView
        android:padding="15dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="@string/main_top_line"
        android:textSize="30sp"
        android:background="@color/darkTint"
        android:textColor="@color/white">
    </TextView>
    <TextView
        android:padding="5dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    </TextView>
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:paddingHorizontal="30dp"
            android:paddingVertical="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/course01"
            android:textSize="20sp" >
        </TextView>
        <EditText
            android:id="@+id/textInput1"
            android:background="@color/textField"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:padding="5dp"
            android:inputType="numberDecimal">
        </EditText>
    </LinearLayout>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"        >
        <TextView
            android:paddingHorizontal="30dp"
            android:paddingVertical="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/course02"
            android:textSize="20sp" >
        </TextView>
        <EditText
            android:id="@+id/textInput2"
            android:background="@color/textField"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:padding="5dp"
            android:inputType="numberDecimal">
        </EditText>
    </LinearLayout>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:paddingHorizontal="30dp"
            android:paddingVertical="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/course03"
            android:textSize="20sp" >
        </TextView>
        <EditText
            android:id="@+id/textInput3"
            android:background="@color/textField"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:padding="5dp"
            android:inputType="numberDecimal">
        </EditText>
    </LinearLayout>
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:paddingHorizontal="30dp"
            android:paddingVertical="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/course04"
            android:textSize="20sp" >
        </TextView>
        <EditText
            android:id="@+id/textInput4"
            android:background="@color/textField"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:padding="5dp"
            android:inputType="numberDecimal">
        </EditText>
    </LinearLayout>
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:paddingHorizontal="30dp"
            android:paddingVertical="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/course05"
            android:textSize="20sp" >
        </TextView>
        <EditText
            android:id="@+id/textInput5"
            android:background="@color/textField"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:padding="5dp"
            android:inputType="numberDecimal">
        </EditText>
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="10dp">
    </TextView>
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/computeGPA"
            android:onClick="compute_GPA"
            android:padding="10dp"
            android:textSize="25sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/grey_700"
            android:textColor="@color/black"
            android:text="@string/computeGPA">
        </Button>
        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center">

            <TextView
                android:id="@+id/GPAtext"
                android:padding="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/GPAtext"
                android:textSize="30sp">
            </TextView>
            <TextView
                android:id="@+id/GPAcalc"
                android:padding="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/GPAcalc"
                android:textSize="40sp">
            </TextView>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>